Added script for test site and renamed io script

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <script src="scripts/visualisation.js" type="text/javascript"></script>
+        <script src="scripts/visualisation_io.js" type="text/javascript"></script>
     </head>
     <body>
     	<div id="yourview-visualization"></div>
